SVG pie graphic

--- a/app.html
+++ b/app.html
@@ -12,11 +12,9 @@
 
 <body>
 <nav id="context-menu" class="context-menu">
-  <div class="context-menu-button">
-    <div class="context-menu-pie"></div>
-    <div class="context-menu-text">ASD</div>
-  </div>
- 
+  <svg id="context-menu-svg" width="220" height="220">
+      <circle r="70" cx="110" cy="110" />
+  </svg>
 </nav>
 
   <div id="first" class="menuable"> Birinci</div>
