Button with icon

--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
 	<link href="styles/w3.css" rel="stylesheet" />
 	<link href="styles/style.css" rel="stylesheet" />
 
-	 
+	 <script src="https://use.fontawesome.com/ae83699d7d.js"></script>
 </head>
 
 <body>
