--- a/app.html
+++ b/app.html
@@ -17,7 +17,9 @@
   <script src="scripts/menu.js"></script>
   <script>
     var my_menu = new PieContextMenu(
-      "context-menu","menuable",8,420
+      "context-menu","menuable",8,220
       );
+      my_menu.resize(100);
+      my_menu.resize(250);
   </script>
 </body>
