--- a/examples/example3.html
+++ b/examples/example3.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,22 +38,11 @@
             user-select: none;
       cursor:context-menu;
     }
-
-    #my_menu .pcm_title{
-      font-size:16px;
-      fill:white;
-    }
-    #my_menu .pcm_icon{
-      font-size:28px;
-    }
-    #my_menu .pcm_center{
-      fill:rgba(0,0,0,0.5)
-    }
   </style>
 </head>
 
 <body>
-  <center><h1>Pie Context Menu Demo 1 - Simple</h1></center>
+  <center><h1>Pie Context Menu Demo 3 - Responsive</h1></center>
 
   <div id="first" class="menuable"> Right Click Me!!! </div>
 
@@ -62,34 +51,18 @@
     var my_menu = new PieContextMenu({
       menuID:"my_menu",
       menuItemClass:"menuable",
-      menuSize:256
+      menuSize:300
     });
 
-    my_menu.addButton("Delete","fa-trash");
-    my_menu.addButton("Change Color","fa-recycle");
-    my_menu.addButton("Release","fa-user-secret");
+    for(var i=0;i<10;i++) my_menu.addButton("Button","fa-circle");
 
-    my_menu.buttons[0].element.addEventListener("click",sayIm,false);
-    my_menu.buttons[1].element.addEventListener("click",cColor,false);
-    my_menu.buttons[2].element.addEventListener("click",secret,false);  
-
-    function sayIm(message){
-      alert("I am immortal");
-    }
-
-    function cColor(){
-      my_menu.lastSelectedElement.style.backgroundColor = '#'+Math.floor(Math.random()*16777215).toString(16);;
-    }
-
-    var sh=16;
-    var ri=0;
-    function secret(){
-      var elm = document.getElementById("first");
-      sh+=10;
-      ri+=10;
-      var shadow = "0px 8px "+sh+"px "+ri+"px";
-      elm.style.boxShadow = shadow+" rgba(0,0,0,0.2), "+shadow+" rgba(0,0,0,0.19)";
-    }
+    var resizeMenu = function(event) {
+        var w = Math.max(document.documentElement.clientWidth, window.innerWidth || 0)
+        var size = Math.min(Math.round(w/2), 300);
+        my_menu.resize(size);
+    };
+    resizeMenu();
+    window.onresize = resizeMenu;
 
   </script>
 
