--- a/examples/example2.html
+++ b/examples/example2.html
@@ -84,10 +84,10 @@
       menuSize:220
     });
 
-    my_menu.addButton("Move","fa-arrows");
-    my_menu.addButton("Rotate","fa-repeat");
-    my_menu.addButton("Text","fa-edit");
-    my_menu.addButton("Flip","fa-check");
+    my_menu.addButton("Move","\uf047");
+    my_menu.addButton("Rotate","\uf01e");
+    my_menu.addButton("Text","\uf044");
+    my_menu.addButton("Flip","\uf00c");
 
     my_menu.buttons[0].element.addEventListener("click",move,false);
     my_menu.buttons[1].element.addEventListener("click",rotate,false);
