--- a/examples/example3.html
+++ b/examples/example3.html
@@ -54,7 +54,7 @@
       menuSize:300
     });
 
-    for(var i=0;i<10;i++) my_menu.addButton("Button","fa-circle");
+    for(var i=0;i<10;i++) my_menu.addButton("Button","\uf10c");
 
     var resizeMenu = function(event) {
         var w = Math.max(document.documentElement.clientWidth, window.innerWidth || 0)
