--- a/examples/example1.html
+++ b/examples/example1.html
@@ -65,10 +65,10 @@
       menuSize:256
     });
 
-    my_menu.addButton("Delete","fa-trash");
-    my_menu.addButton("Change Color","fa-recycle");
-    my_menu.addButton("Release","fa-user-secret");
-
+    my_menu.addButton("Delete",'\uf1f8');
+    my_menu.addButton("Change Color","\uf1b8");
+    my_menu.addButton("Release","\uf21b");
+    
     my_menu.buttons[0].element.addEventListener("click",sayIm,false);
     my_menu.buttons[1].element.addEventListener("click",cColor,false);
     my_menu.buttons[2].element.addEventListener("click",secret,false);  
